--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,9 +5,12 @@
     position: absolute;
     right: 14px;
     top: 2px;
-    font-size: 22px;
+    font-size: 19px;
     background: transparent;
+    cursor: pointer;
+    outline: none;
     border: none;
+    color: #2900f8;
 
 }
 
